2016-08-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gplink/cod.c, gputils/dump.c, libgputils/gpcod.c,
    libgputils/gpcod.h:
    The length of source file names in .cod file, now 256 bytes long
    instead of 64 bytes. The gpvc utility thereafter also able to
    correctly detect the shorter names.

2016-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.c, gpasm/gpmsg.c:
    bugfix

  * configure.ac, configure:
    New option: --enable-gdb-debuginfo

  * gpasm/lst.c:
    Code formatting.

2016-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, TODO:
    The ".direct" directive - inside of the parameter string -
    recognize and execute the #v() macro.

  * gputils/dump.c:
    bugfix

  * gpasm/cod.c, gplink/cod.c:
    More or more accurate warning messages.

  * gpasm/gpmsg.c, libgputils/gpsystem.c, libgputils/gpsystem.h:
    Minor optimization.

  * gplink/gplink.c, gplink/parse.y, gplink/script.c, gplink/script.h:
    Renamed some functions:
	script_add_macro --> script_add_symbol_value
	script_get_macro --> script_get_symbol_value

  * gplink/scan.l:
    The names of static functions got '_' prefix.

  * gpasm/coff.c, gpasm/coff.h, gpasm/util.c, gplink/map.c:
    Code formatting.

2016-08-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Minor optimization.

  * gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/util.c:
    Renamed some functions:

  * gpasm/gpasm.h.in, gpasm/lst.c, gpasm/util.c:
    Added the macro parameters to the list.

  * gpasm/symbol_list.c, libgputils/gpcod.h:
    Some short comment.

  * gpasm/evaluate.c, gpasm/scan.l:
    Code formatting.

2016-08-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/Makefile.*, gpasm/coff.c, gpasm/coff.h, gpasm/directive.c,
    gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/symbol_list.c,
    gpasm/symbol_list.h, gpasm/util.c, gplink/gplink.c,